--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "3.1.48",
-        "php-ffmpeg/php-ffmpeg": "^1.3"
+        "php-ffmpeg/php-ffmpeg": "^1.3",
+        "razorpay/razorpay": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
